modules/cli/src/test/resources/good/efsm/gchoice/Test02.scr
module good.efsm.gchoice.Test02;


global protocol Foo(role A, role B)
{
	0() from A to B;
	choice at A
	{
		1a() from A to B;
	}
	or
	{
		2a() from A to B;
		2b() from B to A;
	}
	3() from B to A;
}

