modules/cli/src/test/resources/bad/liveness/roleprog/Test02.scr
module bad.liveness.roleprog.Test02;


global protocol Proto1(role A, role B, role C)
{
	1() from A to B;
	choice at B
	{
		rec X
		{
			2() from B to C;
			continue X;
		}
	}
	or
	{
		3() from B to C;
	}
	4() from C to A;
}
